--- a/index.html
+++ b/index.html
@@ -43,25 +43,15 @@
             bottom: 0;
             width: 100%;
         }
-        .button {
-            background-color: #DEB887;
-            border: none;
-            color: #000000;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 14px;
-            margin: 10px 0;
-            cursor: pointer;
-            font-family: "Courier New", Courier, monospace;
-        }
-        .button:hover {
-            background-color: #D2B48C;
+        /* Canvas Styling */
+        #chartContainer {
+            width: 80%;
+            margin: 0 auto;
         }
     </style>
-    <!-- Einbinden von Chart.js -->
+    <!-- Einbinden von Chart.js und Papa Parse -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
 </head>
 <body>
     <header>
@@ -78,95 +68,89 @@
             Diese Seite ist nur zum Testen der Funktionen und des kurzfristigen
             Environments.
         </p>
-        <!-- Platzhalter für das Diagramm -->
-        <canvas id="myChart" width="400" height="200"></canvas>
+
+        <!-- Bereich für den Graphen -->
+        <div id="chartContainer">
+            <canvas id="myChart"></canvas>
+        </div>
     </main>
     <footer>
         &copy; 2024 Retro-Webseite. Alle Rechte vorbehalten.
     </footer>
 
     <script>
-        // Laden und Verarbeiten der CSV-Datei
-        fetch('./history.csv')
-        .then(response => response.text())
-        .then(data => {
-            // CSV-Daten parsen
-            var parsedData = parseCSV(data);
-            if(parsedData.length < 2) {
-                console.error('CSV-Daten sind leer oder fehlerhaft.');
-                return;
-            }
-            // Header-Zeile und Index der 'new_Money' Spalte ermitteln
-            var headers = parsedData[0];
-            var headerIndex = headers.indexOf('new_Money');
-            if(headerIndex === -1) {
-                console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
-                return;
-            }
+        // Funktion zum Laden und Parsen der CSV-Datei mit Papa Parse
+        Papa.parse('./history.csv', {
+            download: true,
+            header: true,
+            delimiter: "\t", // Tabulator als Trennzeichen
+            skipEmptyLines: true,
+            complete: function(results) {
+                var data = results.data;
 
-            // Daten extrahieren
-            var labels = [];
-            var newMoneyData = [];
-            for(var i = 1; i < parsedData.length; i++) {
-                var row = parsedData[i];
-                if(row.length > headerIndex) {
-                    labels.push(i); // Alternativ kannst du hier Zeitstempel verwenden, falls vorhanden
-                    newMoneyData.push(parseFloat(row[headerIndex]));
+                // Prüfen, ob die Spalte 'new_Money' existiert
+                if (!data[0].hasOwnProperty('new_Money')) {
+                    console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
+                    console.log('Verfügbare Spalten:', Object.keys(data[0]));
+                    return;
                 }
-            }
 
-            // Diagramm erstellen
-            var ctx = document.getElementById('myChart').getContext('2d');
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'new_Money',
-                        data: newMoneyData,
-                        backgroundColor: 'rgba(222, 184, 135, 0.2)',
-                        borderColor: 'rgba(139, 69, 19, 1)',
-                        borderWidth: 2,
-                        fill: false,
-                        tension: 0.1,
-                        pointRadius: 3
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            display: true,
-                            title: {
+                var labels = [];
+                var newMoneyData = [];
+
+                data.forEach((row, index) => {
+                    // Falls ein Datum oder ein anderer Wert als Label genutzt werden soll, entsprechende Spalte verwenden
+                    labels.push(index + 1); // oder row['Datum'] falls vorhanden
+                    var value = parseFloat(row['new_Money']);
+                    if (!isNaN(value)) {
+                        newMoneyData.push(value);
+                    } else {
+                        newMoneyData.push(0); // Oder den Wert überspringen
+                    }
+                });
+
+                // Diagramm erstellen
+                var ctx = document.getElementById('myChart').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'new_Money',
+                            data: newMoneyData,
+                            backgroundColor: 'rgba(222, 184, 135, 0.2)',
+                            borderColor: 'rgba(139, 69, 19, 1)',
+                            borderWidth: 2,
+                            fill: false,
+                            tension: 0.1,
+                            pointRadius: 3
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        scales: {
+                            x: {
                                 display: true,
-                                text: 'Index'
-                            }
-                        },
-                        y: {
-                            display: true,
-                            title: {
+                                title: {
+                                    display: true,
+                                    text: 'Index'
+                                }
+                            },
+                            y: {
                                 display: true,
-                                text: 'new_Money'
+                                title: {
+                                    display: true,
+                                    text: 'new_Money'
+                                }
                             }
                         }
                     }
-                }
-            });
-        })
-        .catch(error => {
-            console.error('Fehler beim Laden oder Verarbeiten von history.csv:', error);
+                });
+            },
+            error: function(err, file, inputElem, reason) {
+                console.error('Fehler beim Laden oder Verarbeiten von history.csv:', err);
+            }
         });
-
-        // Einfache CSV-Parser-Funktion
-        function parseCSV(data) {
-            var lines = data.trim().split('\n');
-            var result = [];
-            lines.forEach(function(line) {
-                var values = line.split(',');
-                result.push(values);
-            });
-            return result;
-        }
     </script>
 </body>
 </html>
