--- a/index.html
+++ b/index.html
@@ -1,81 +1,77 @@
-Papa.parse('./history.csv', {
-    download: true,
-    header: true,
-    skipEmptyLines: true,
-    complete: function(results) {
-        var data = results.data;
+<!-- Einbinden von Chart.js und Papa Parse -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
 
-        // Debugging: Ausgabe der geparsten Daten und des erkannten Trennzeichens
-        console.log('Erkanntes Trennzeichen:', results.meta.delimiter);
-        console.log('Geparste Daten:', data);
+<!-- Dein JavaScript-Code -->
+<script>
+    // Laden und Verarbeiten der CSV-Datei mit Papa Parse
+    Papa.parse('./history.csv', {
+        download: true,
+        header: true,
+        skipEmptyLines: true,
+        complete: function(results) {
+            var data = results.data;
 
-        // Spaltennamen trimmen
-        data = data.map(row => {
-            let newRow = {};
-            for (let key in row) {
-                if (row.hasOwnProperty(key)) {
-                    let trimmedKey = key.trim();
-                    newRow[trimmedKey] = row[key];
-                }
+            // Debugging: Ausgabe der geparsten Daten und des erkannten Trennzeichens
+            console.log('Erkanntes Trennzeichen:', results.meta.delimiter);
+            console.log('Geparste Daten:', data);
+
+            // Prüfen, ob die Spalte 'new_Money' existiert
+            if (!data[0].hasOwnProperty('new_Money')) {
+                console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
+                console.log('Verfügbare Spalten:', Object.keys(data[0]));
+                return;
             }
-            return newRow;
-        });
 
-        // Prüfen, ob die Spalte 'new_Money' existiert
-        if (!data[0].hasOwnProperty('new_Money')) {
-            console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
-            console.log('Verfügbare Spalten:', Object.keys(data[0]));
-            return;
-        }
+            var labels = [];
+            var newMoneyData = [];
 
-        var labels = [];
-        var newMoneyData = [];
+            data.forEach((row, index) => {
+                labels.push(index + 1); // Alternativ kannst du hier einen Datumseintrag verwenden, z.B. row['sell_Date']
+                var value = parseFloat(row['new_Money']);
+                newMoneyData.push(value);
+            });
 
-        data.forEach((row, index) => {
-            labels.push(index + 1); // Alternativ kannst du hier einen Zeitstempel verwenden
-            var value = parseFloat(row['new_Money']);
-            newMoneyData.push(value);
-        });
-
-        // Diagramm erstellen
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: 'new_Money',
-                    data: newMoneyData,
-                    backgroundColor: 'rgba(222, 184, 135, 0.2)',
-                    borderColor: 'rgba(139, 69, 19, 1)',
-                    borderWidth: 2,
-                    fill: false,
-                    tension: 0.1,
-                    pointRadius: 3
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    x: {
-                        display: true,
-                        title: {
+            // Diagramm erstellen
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: 'new_Money',
+                        data: newMoneyData,
+                        backgroundColor: 'rgba(222, 184, 135, 0.2)',
+                        borderColor: 'rgba(139, 69, 19, 1)',
+                        borderWidth: 2,
+                        fill: false,
+                        tension: 0.1,
+                        pointRadius: 3
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        x: {
                             display: true,
-                            text: 'Index'
-                        }
-                    },
-                    y: {
-                        display: true,
-                        title: {
+                            title: {
+                                display: true,
+                                text: 'Index'
+                            }
+                        },
+                        y: {
                             display: true,
-                            text: 'new_Money'
+                            title: {
+                                display: true,
+                                text: 'new_Money'
+                            }
                         }
                     }
                 }
-            }
-        });
-    },
-    error: function(err, file, inputElem, reason) {
-        console.error('Fehler beim Laden oder Verarbeiten von history.csv:', err);
-    }
-});
+            });
+        },
+        error: function(err, file, inputElem, reason) {
+            console.error('Fehler beim Laden oder Verarbeiten von history.csv:', err);
+        }
+    });
+</script>
