--- a/index.html
+++ b/index.html
@@ -1,77 +1,180 @@
-<!-- Einbinden von Chart.js und Papa Parse -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>Live Environment Test-Area</title>
+    <style>
+        body {
+            background-color: #F0E68C;
+            font-family: "Courier New", Courier, monospace;
+            color: #000;
+            margin: 0;
+        }
+        header {
+            background-color: #8B4513;
+            color: #FFFFFF;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #DEB887;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #000000;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+        }
+        h1, h2 {
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        footer {
+            background-color: #8B4513;
+            color: #FFFFFF;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        /* Canvas Styling */
+        #chartContainer {
+            width: 80%;
+            margin: 20px auto;
+        }
+        #myChart {
+            max-width: 100%;
+            height: 400px;
+        }
+    </style>
+    <!-- Einbinden von Chart.js und Papa Parse -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+</head>
+<body>
+    <header>
+        <h1>Willkommen auf meiner Retro-Webseite</h1>
+    </header>
+    <nav>
+        <a href="./result.png" download>Result Bild Downloaden</a>
+        <a href="./history.json" download>Json Historie Downloaden</a>
+        <a href="./history.csv" download>CSV Historie Downloaden</a>
+    </nav>
+    <main>
+        <h2>Über die Seite</h2>
+        <p>
+            Diese Seite ist nur zum Testen der Funktionen und des kurzfristigen Environments.
+        </p>
 
-<!-- Dein JavaScript-Code -->
-<script>
-    // Laden und Verarbeiten der CSV-Datei mit Papa Parse
-    Papa.parse('./history.csv', {
-        download: true,
-        header: true,
-        skipEmptyLines: true,
-        complete: function(results) {
-            var data = results.data;
+        <!-- Bereich für den Graphen -->
+        <div id="chartContainer">
+            <canvas id="myChart"></canvas>
+        </div>
+    </main>
+    <footer>
+        &copy; 2024 Retro-Webseite. Alle Rechte vorbehalten.
+    </footer>
 
-            // Debugging: Ausgabe der geparsten Daten und des erkannten Trennzeichens
-            console.log('Erkanntes Trennzeichen:', results.meta.delimiter);
-            console.log('Geparste Daten:', data);
+    <!-- Dein Skript am Ende des Body-Tags -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Laden und Verarbeiten der CSV-Datei mit Papa Parse
+            Papa.parse('./history.csv', {
+                download: true,
+                header: true,
+                skipEmptyLines: true,
+                complete: function(results) {
+                    var data = results.data;
 
-            // Prüfen, ob die Spalte 'new_Money' existiert
-            if (!data[0].hasOwnProperty('new_Money')) {
-                console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
-                console.log('Verfügbare Spalten:', Object.keys(data[0]));
-                return;
-            }
+                    // Debugging: Ausgabe der geparsten Daten und des erkannten Trennzeichens
+                    console.log('Erkanntes Trennzeichen:', results.meta.delimiter);
+                    console.log('Geparste Daten:', data);
 
-            var labels = [];
-            var newMoneyData = [];
-
-            data.forEach((row, index) => {
-                labels.push(index + 1); // Alternativ kannst du hier einen Datumseintrag verwenden, z.B. row['sell_Date']
-                var value = parseFloat(row['new_Money']);
-                newMoneyData.push(value);
-            });
-
-            // Diagramm erstellen
-            var ctx = document.getElementById('myChart').getContext('2d');
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'new_Money',
-                        data: newMoneyData,
-                        backgroundColor: 'rgba(222, 184, 135, 0.2)',
-                        borderColor: 'rgba(139, 69, 19, 1)',
-                        borderWidth: 2,
-                        fill: false,
-                        tension: 0.1,
-                        pointRadius: 3
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            display: true,
-                            title: {
-                                display: true,
-                                text: 'Index'
-                            }
-                        },
-                        y: {
-                            display: true,
-                            title: {
-                                display: true,
-                                text: 'new_Money'
+                    // Spaltennamen trimmen und prüfen
+                    data = data.map(row => {
+                        let newRow = {};
+                        for (let key in row) {
+                            if (row.hasOwnProperty(key)) {
+                                let trimmedKey = key.trim();
+                                newRow[trimmedKey] = row[key];
                             }
                         }
+                        return newRow;
+                    });
+
+                    // Prüfen, ob die Spalte 'new_Money' existiert
+                    if (!data[0].hasOwnProperty('new_Money')) {
+                        console.error('Spalte "new_Money" nicht in der CSV-Datei gefunden.');
+                        console.log('Verfügbare Spalten:', Object.keys(data[0]));
+                        return;
                     }
+
+                    var labels = [];
+                    var newMoneyData = [];
+
+                    data.forEach((row, index) => {
+                        labels.push(index + 1); // Alternativ kannst du hier einen Zeitstempel verwenden
+                        var value = parseFloat(row['new_Money']);
+                        newMoneyData.push(value);
+                    });
+
+                    // Überprüfen, ob das Canvas-Element vorhanden ist
+                    var canvasElement = document.getElementById('myChart');
+                    console.log('Canvas Element:', canvasElement);
+                    if (!canvasElement) {
+                        console.error('Canvas-Element mit ID "myChart" nicht gefunden.');
+                        return;
+                    }
+
+                    // Diagramm erstellen
+                    var ctx = canvasElement.getContext('2d');
+                    var myChart = new Chart(ctx, {
+                        type: 'line',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: 'new_Money',
+                                data: newMoneyData,
+                                backgroundColor: 'rgba(222, 184, 135, 0.2)',
+                                borderColor: 'rgba(139, 69, 19, 1)',
+                                borderWidth: 2,
+                                fill: false,
+                                tension: 0.1,
+                                pointRadius: 3
+                            }]
+                        },
+                        options: {
+                            responsive: true,
+                            scales: {
+                                x: {
+                                    display: true,
+                                    title: {
+                                        display: true,
+                                        text: 'Index'
+                                    }
+                                },
+                                y: {
+                                    display: true,
+                                    title: {
+                                        display: true,
+                                        text: 'new_Money'
+                                    }
+                                }
+                            }
+                        }
+                    });
+                },
+                error: function(err, file, inputElem, reason) {
+                    console.error('Fehler beim Laden oder Verarbeiten von history.csv:', err);
                 }
             });
-        },
-        error: function(err, file, inputElem, reason) {
-            console.error('Fehler beim Laden oder Verarbeiten von history.csv:', err);
-        }
-    });
-</script>
+        });
+    </script>
+</body>
+</html>
