--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen auf meiner Retro-Webseite</h1>
+        <h1>Der Neue Algorithmus ist da </h1>
     </header>
     <nav>
         <a href="./result.png" download>Result Bild Downloaden</a>
@@ -69,7 +69,7 @@
     <main>
         <h2>Über die Seite</h2>
         <p>
-            Diese Seite ist nur zum Testen der Funktionen und des kurzfristigen Environments.
+            Diese Seite ist nur zum Testen der Funktionen Versionscode: 0.1
         </p>
 
         <!-- Bereich für den Graphen -->
@@ -78,7 +78,7 @@
         </div>
     </main>
     <footer>
-        &copy; 2024 Retro-Webseite. Alle Rechte vorbehalten.
+        &copy; 2024 Alle Rechte vorbehalten.
     </footer>
 
     <!-- Dein Skript am Ende des Body-Tags -->
