--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <a href="./history.csv" download>CSV Historie Downloaden</a>
     </nav>
     <main>
-        <h2>Über die Seite</h2>
+        <h2Versionscode: 0.1</h2>
         <p>
-            Diese Seite ist nur zum Testen der Funktionen Versionscode: 0.1
+            Diese Seite ist in einem Experimentellen Stadium
         </p>
 
         <!-- Bereich für den Graphen -->
